Fix overflow-x

--- a/src/pages/country/country.module.css
+++ b/src/pages/country/country.module.css
@@ -1,9 +1,9 @@
 .info_label {
     font-weight: bolder;
 }
-.container {
+/* .container {
     margin: 2rem;
-}
+} */
 .image_container {
     background-color: rgb(235, 230, 236);
     width: 450px;
@@ -53,4 +53,57 @@
 
 .stats_daily {
     font-size: 0.9rem;
+}
+
+@media screen and (max-width: 800px) {
+    .image_container {
+        background-color: rgb(235, 230, 236);
+        width: 450px;
+        height: 280px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 0 auto;
+    }
+    
+    .image {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .title {
+        text-align: center;
+        font-size: 2.5rem;
+    }
+    
+    .sub_title {
+        text-align: center;
+        margin-top: -1rem;
+        font-size: 1.25rem;
+    }
+    
+    .population {
+        text-align: center;
+        font-size: 1rem;
+        background-color: rgb(235, 230, 236);
+        width: 400px;
+        margin: 0 auto;
+        padding: 0.5rem;
+    }
+    
+    .stats_container {
+        display: flex;
+        justify-content: center;
+        margin-bottom: -3.5rem;
+    }
+    
+    .stats {
+        font-size: 0.9rem; 
+        margin: 0 1rem;
+    }
+    
+    .stats_daily {
+        font-size: 0.9rem;
+    }
 }
